--- a/src/assets/css/styles.scss
+++ b/src/assets/css/styles.scss
@@ -734,19 +734,44 @@ footer{
             right: 10px;                
         }
     }
+    .footer-content-top {
+        flex-direction: column;
+        gap: 1rem;
+    }
 }
 
-// @media screen and (max-width: 650px) {
-//     .navbar {
-//         .nav-items {
-//             background-color: yellow;
-//         }
-//     }
-// }
-// @media screen and (max-width: 350px) {
-//     .navbar {
-//         .nav-items {
-//             background-color: green;
-//         }
-//     }
-// }
+@media screen and (max-width: 650px) {
+    // .navbar {
+    //     .nav-items {
+    //         background-color: yellow;
+    //     }
+    // }
+
+    footer {
+        padding: 0.5rem 0;
+
+        .footer-content {
+            width: 100%;
+    
+            .footer-content-top {
+                padding: 0;
+        
+                .quick-links {
+                    gap: 1rem;
+                }
+            }
+        }   
+    }
+}
+
+@media screen and (max-width: 350px) {
+    // .navbar {
+    //     .nav-items {
+    //         background-color: green;
+    //     }
+    // }
+    .quick-links {
+        flex-direction: column;
+        align-items: center;
+    }
+}
