--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -594,6 +594,9 @@ footer .footer-content .tag {
   .navbar .logo-holder {
     margin-left: 1rem;
   }
+  .home .carousel .carousel-item .carousel-item-content {
+    width: 70%;
+  }
 }
 @media screen and (max-width: 728px) {
   .navbar {
@@ -622,12 +625,21 @@ footer .footer-content .tag {
     top: 10px;
     right: 10px;
   }
+  .home .carousel .carousel-item .carousel-item-content {
+    width: 80%;
+  }
   .footer-content-top {
     flex-direction: column;
     gap: 1rem;
   }
 }
 @media screen and (max-width: 650px) {
+  .home .carousel .carousel-item .carousel-item-content {
+    width: 90%;
+  }
+  .home .carousel .carousel-item .carousel-item-content .desc {
+    font-size: 2.5rem;
+  }
   footer {
     padding: 0.5rem 0;
   }
@@ -642,6 +654,16 @@ footer .footer-content .tag {
   }
 }
 @media screen and (max-width: 350px) {
+  .home .carousel .carousel-item .carousel-item-content {
+    width: 100%;
+  }
+  .home .carousel .carousel-item .carousel-item-content .desc {
+    font-size: 2rem;
+  }
+  .home .carousel .carousel-item .carousel-item-content .auth {
+    flex-direction: column;
+    gap: 0.5rem;
+  }
   .quick-links {
     flex-direction: column;
     align-items: center;
