--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -550,12 +550,10 @@ footer .footer-content .footer-content-top {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 0 1rem;
 }
 footer .footer-content .footer-content-top .logo-holder {
   display: flex;
   align-items: center;
-  gap: 1rem;
   padding: 1rem 0;
 }
 footer .footer-content .footer-content-top .logo-holder img {
@@ -628,13 +626,17 @@ footer .footer-content .tag {
   .home .carousel .carousel-item .carousel-item-content {
     width: 80%;
   }
-  .footer-content-top {
+  footer {
+    padding: 0.5rem 0;
+  }
+  footer .footer-content-top {
     flex-direction: column;
-    gap: 1rem;
+    gap: 0.5rem;
   }
 }
 @media screen and (max-width: 650px) {
   .home .carousel .carousel-item .carousel-item-content {
+    top: 25%;
     width: 90%;
   }
   .home .carousel .carousel-item .carousel-item-content .desc {
