--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -201,7 +201,7 @@
   background-size: cover;
   display: flex;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: center;
   padding: 2rem;
 }
 .auth-container .form {
@@ -210,7 +210,6 @@
   flex-direction: column;
   gap: 0.5rem;
   width: 50%;
-  max-width: 800px;
   background-color: rgba(255, 255, 255, 0.8);
 }
 .auth-container .form .reg-title {
@@ -225,54 +224,9 @@
 .auth-container .form .auth-input {
   width: 100%;
 }
-.auth-container .form .phoneNo-cont {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-}
-.auth-container .form .phoneNo-cont .phone-input {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%;
-}
-.auth-container .form .phoneNo-cont .phone-input .send-otp {
-  width: 20%;
-  text-align: center;
-}
-.auth-container .form .phoneNo-cont .phone-verify {
-  display: flex;
-  gap: 1rem;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  margin-top: 1rem;
-}
-.auth-container .form .phoneNo-cont .phone-verify .recaptcha {
-  width: 50%;
-}
-.auth-container .form .phoneNo-cont .phone-verify .otp-cont {
-  display: flex;
-  flex-direction: column;
-  gap: 0.4rem;
-  width: 50%;
-}
-.auth-container .form .phoneNo-cont .phone-verify .otp-cont .btn {
-  text-align: center;
-  width: 100%;
-}
 .auth-container .form .register {
   font-size: 1rem;
   padding: 0.8rem 1.5rem;
-}
-.auth-container .form .disabled {
-  align-self: flex-start;
-  padding: 0.8rem 1.5rem;
-  background-color: rgb(172, 171, 171);
-  color: white;
-  border: none;
-  cursor: not-allowed;
 }
 .auth-container .form .redirect-auth {
   width: 100%;
@@ -308,19 +262,16 @@
   font-weight: 600;
   color: #6262A6;
 }
-.page-container .story-header {
-  display: flex;
-  justify-content: space-between;
-}
-.page-container .story-header .story-left {
+.page-container .story-left {
   gap: 1rem;
 }
-.page-container .story-header .insights {
+.page-container .insights {
   display: flex;
   gap: 1rem;
   align-items: center;
+  align-self: flex-end;
 }
-.page-container .story-header .insights .insight-icon {
+.page-container .insights .insight-icon {
   display: flex;
   align-items: center;
 }
@@ -394,12 +345,12 @@
   border: none;
   font-size: 1rem;
   cursor: pointer;
-  background: #fff;
+  background: #f9f9f9;
 }
 .page-container .cancel:hover {
   color: rgb(164, 164, 232);
 }
-.page-container .edit-actions {
+.page-container .story-actions {
   display: flex;
   gap: 1rem;
 }
@@ -595,6 +546,18 @@ footer .footer-content .tag {
   .home .carousel .carousel-item .carousel-item-content {
     width: 70%;
   }
+  .auth-container .form {
+    width: 70%;
+  }
+  .page-container {
+    width: 90%;
+  }
+  .page-container .new-story-content {
+    margin: 0.5rem 0;
+  }
+  .page-container .new-story-content .story-title {
+    font-size: 1.5rem;
+  }
 }
 @media screen and (max-width: 728px) {
   .navbar {
@@ -610,6 +573,7 @@ footer .footer-content .tag {
     align-items: center;
     margin-top: 0.5rem;
     border-top: 1px solid #BBBBBB;
+    gap: 1rem;
   }
   .navbar .nav-items.hide {
     display: none;
@@ -626,6 +590,18 @@ footer .footer-content .tag {
   .home .carousel .carousel-item .carousel-item-content {
     width: 80%;
   }
+  .page-container {
+    margin-top: 0.5rem;
+  }
+  .page-container .story-container .story-holder .story .story-title {
+    font-size: 1.2rem;
+  }
+  .page-container .story-container .story-holder .story .story-story {
+    font-size: 0.9rem;
+  }
+  .page-container .story-container .story-holder .story .story-views {
+    font-size: 0.7rem;
+  }
   footer {
     padding: 0.5rem 0;
   }
@@ -635,12 +611,60 @@ footer .footer-content .tag {
   }
 }
 @media screen and (max-width: 650px) {
+  .btn {
+    font-size: 0.8rem;
+    padding: 0.3rem 0.6rem;
+  }
   .home .carousel .carousel-item .carousel-item-content {
     top: 25%;
     width: 90%;
   }
   .home .carousel .carousel-item .carousel-item-content .desc {
     font-size: 2.5rem;
+  }
+  .auth-container .form {
+    width: 90%;
+  }
+  .auth-container .form .reg-title {
+    font-size: 1.5rem;
+  }
+  .auth-container .form .register {
+    font-size: 0.8rem;
+    padding: 0.5rem 1rem;
+  }
+  .page-container .page-header {
+    flex-direction: column;
+    gap: 1rem;
+  }
+  .page-container .page-header .btn {
+    align-self: flex-end;
+  }
+  .page-container .story-container .story-holder .story {
+    flex-basis: 100%;
+  }
+  .page-container .story-left .story-title {
+    font-size: 1.2rem;
+  }
+  .page-container .story-left span {
+    font-size: 0.8rem;
+  }
+  .page-container .insights {
+    gap: 0.5rem;
+  }
+  .page-container .story-content {
+    font-size: 0.9rem;
+  }
+  .page-container .story-views {
+    font-size: 0.7rem;
+  }
+  .page-container .insights-section .insights-header {
+    font-size: 1.2rem;
+  }
+  .page-container .insights-section .no-insights {
+    font-size: 0.9rem;
+  }
+  .page-container .vid-container .vid-holder .vid {
+    flex-basis: 100%;
   }
   footer {
     padding: 0.5rem 0;
