--- a/src/assets/css/styles.scss
+++ b/src/assets/css/styles.scss
@@ -274,6 +274,19 @@ $gray: #BBBBBB;
                 cursor: pointer;
             }
         }
+        .auth-btn-container {
+            display: flex;
+            justify-content: space-between;
+            gap: 1rem;
+
+            .forgot-password {
+                cursor: pointer;
+                
+                &:hover {
+                    text-decoration: underline;
+                }
+            }   
+        }
     }
 }
 
@@ -745,10 +758,10 @@ footer{
     }
 
 @media screen and (max-width: 650px) {
-    .btn {
-        font-size: 0.8rem;
-        padding: 0.3rem 0.6rem;
-    }
+    // .btn {
+    //     font-size: 0.8rem;
+    //     padding: 0.3rem 0.6rem;
+    // }
 
     .home {
         .carousel {
@@ -872,6 +885,12 @@ footer{
             }
         }
     }
+
+    .auth-btn-container {
+        flex-direction: column;
+        gap: 0.5rem;
+    }
+
     .quick-links {
         // background-color: green;
         flex-direction: column;
