--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -420,6 +420,10 @@
   gap: 1rem;
 }
 
+.reset-input {
+  width: 50%;
+}
+
 .overlay {
   position: fixed;
   top: 0;
@@ -569,6 +573,9 @@ footer .footer-content .tag {
   .page-container .new-story-content .story-title {
     font-size: 1.5rem;
   }
+  .reset-input {
+    width: 70%;
+  }
 }
 @media screen and (max-width: 728px) {
   .navbar {
@@ -612,6 +619,9 @@ footer .footer-content .tag {
   }
   .page-container .story-container .story-holder .story .story-views {
     font-size: 0.7rem;
+  }
+  .reset-input {
+    width: 80%;
   }
   footer {
     padding: 0.5rem 0;
@@ -673,6 +683,9 @@ footer .footer-content .tag {
   .page-container .vid-container .vid-holder .vid {
     flex-basis: 100%;
   }
+  .reset-input {
+    width: 90%;
+  }
   footer {
     padding: 0.5rem 0;
   }
@@ -700,6 +713,9 @@ footer .footer-content .tag {
   .auth-btn-container {
     flex-direction: column;
     gap: 0.5rem;
+  }
+  .reset-input {
+    width: 100%;
   }
   .quick-links {
     flex-direction: column;
